# c_json_tools

./: .gitignore  CMakeLists.txt  Makefile  README.md
cmake/: FindCriterion.cmake  FindSphinx.cmake
cmake/script/: create_coverage_directory.cmake  create_test_directories.cmake
doc/: CMakeLists.txt  Doxyfile.in  conf.py  editor.rst  error.rst  function_index.rst  generator.rst  getters.rst  getting_started.rst  index.rst  intro.rst  parser.rst  setup.rst
doc/editor/: append.rst  extract.rst  set.rst  unset.rst
doc/getters/: index.rst  key.rst
include/: error.h  escape_character.h  generator.h  parser.h  strtok.h
include/editor/: compare.h  key.h  unset.h
include/editor/add/: array.h  object.h
include/editor/compare/: type.h
include/editor/destroy/: union.h
include/editor/extract/index/: array.h  object.h
include/editor/extract/key/: object.h
include/generator/: generate.h  write.h
include/getters/: array.h  object.h  type.h
include/getters/index/: array.h  object.h
include/getters/key/: object.h
include/getters/value/: array.h
include/json/: editor.h  error.h  generator.h  getters.h  json.h  parser.h
include/json/editor/: append.h  compare.h  create.h  destroy.h  extract.h  set.h  unset.h
include/json/editor/append/: array.h  object.h
include/json/editor/extract/: array.h  object.h
include/json/editor/extract/index/: array.h  object.h
include/json/editor/extract/key/: object.h
include/json/editor/set/: object.h
include/json/editor/set/index/: array.h
include/json/editor/set/key/: object.h
include/json/editor/unset/: array.h  object.h
include/json/getters/: array.h  object.h
include/json/getters/index/: array.h  object.h
include/json/getters/key/: object.h
include/json/getters/value/: array.h
include/json/internal/: error.h  escape_character.h  generator.h  parser.h  strtok.h
include/json/internal/editor/: compare.h  key.h  unset.h
include/json/internal/editor/add/: array.h  object.h
include/json/internal/editor/compare/: type.h
include/json/internal/editor/destroy/: union.h
include/json/internal/generator/: generate.h
include/json/internal/getters/index/: array.h  object.h
include/json/internal/getters/key/: object.h
include/json/internal/getters/value/: array.h
include/json/internal/parser/: array.h  object.h
include/json/internal/parser/token/: flag.h
include/json/internal/parser/value/: array.h  object.h  str.h
include/json/internal/typedef/: array.h  error.h  error_code.h  escape_character.h  generator.h  object.h  parser.h  token.h  type.h
include/json/internal/typedef/token/: flag.h
include/json/type/: array.h  object.h
include/parser/: array.h  object.h
include/parser/token/: flag.h
include/parser/token/flag/: array.h  object.h
include/parser/value/: array.h  object.h  str.h
include/typedef/: array.h  error.h  error_code.h  escape_character.h  generator.h  object.h  parser.h  token.h  type.h
include/typedef/token/: flag.h
src/: CMakeLists.txt  error.c  escape_character.c  generator_array.c  generator_object.c  parser_fd.c  parser_filepath.c  parser_str.c  token.c
src/editor/: key.c
src/editor/add/: array.c  object.c
src/editor/add/array/: advanced_type.c  basic_type.c
src/editor/add/object/: advanced_type.c  basic_type.c
src/editor/append/array/: advanced_type.c  basic_type.c
src/editor/append/object/: advanced_type.c  basic_type.c
src/editor/compare/: advanced_type.c  basic_type.c  type.c
src/editor/create/: array.c  object.c
src/editor/destroy/: array.c  object.c  union.c
src/editor/extract/index/: array.c  object.c
src/editor/extract/index/array/: advanced_type.c  basic_type.c
src/editor/extract/index/object/: advanced_type.c  basic_type.c
src/editor/extract/key/: object.c
src/editor/set/object/: advanced_type.c  basic_type.c
src/editor/unset/: index.c  key.c  object.c
src/editor/unset/value/: array.c
src/generator/: array.c  buffer.c  object.c  output.c  setup_teardown.c  write.c
src/generator/generate/: basic_type.c  indent.c  token.c  union.c
src/generator/write/: basic_type.c  indent.c  token.c  union.c
src/getters/: object.c  type.c
src/getters/array/type/: advanced.c  basic.c
src/getters/index/: array.c  object.c
src/getters/index/array/: advanced_type.c  basic_type.c
src/getters/index/object/: advanced_type.c  basic_type.c
src/getters/key/: key.c  object.c
src/getters/key/object/: advanced_type.c  array.c  basic_type.c  bool.c  nb.c  null.c  object.c  str.c
src/getters/object/type/: advanced.c  basic.c
src/getters/object/value/: array.c  bool.c  nb.c  null.c  object.c  str.c
src/getters/value/: array.c
src/getters/value/array/: advanced_type.c  basic_type.c
src/parser/: array.c  array_advanced_type.c  key.c  object.c  object_advanced_type.c  setup.c  strtok.c  teardown.c  token.c  type.c
src/parser/token/: file.c  flag.c  str.c
src/parser/token/flag/: array.c  object.c
src/parser/value/: str.c
src/parser/value/array/: basic_type.c
src/parser/value/object/: basic_type.c
tests/: CMakeLists.txt  get_file_content.c  json_array_fd.c  json_array_filepath.c  json_array_str.c  json_obj_fd.c  json_obj_filepath.c  json_obj_str.c
tests/editor/: append.c  compare.c  set.c  unset.c
tests/editor/extract/index/: array.c  object.c
tests/editor/extract/key/: object.c
tests/editor/set/index/: array.c
tests/editor/set/key/: object.c
tests/editor/unset/: index.c  object.c
tests/editor/unset/value/: array.c
tests/expected/array/: valid.json
tests/file/: get_file_content.txt
tests/file/array/: invalid_eof.json  invalid_eof_excess.json  synthax.json  unmatched_quote.json  valid.json  valid_long.json
tests/generator/: str.c
tests/getters/: object.c
tests/getters/index/: array.c  object.c
tests/getters/key/: object.c
tests/getters/value/: array.c
tests/include/: proto.h
tests/parser/: json_array_fd.c  json_array_filepath.c  json_array_str.c  json_obj_fd.c  json_obj_filepath.c  json_obj_str.c  strtok.c
tests/parser/token/flag/: array.c  object.c
(+17 files in other folders)
